--- a/index.html
+++ b/index.html
@@ -19,29 +19,38 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Acerca de mi <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Habilidades <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Servicios <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Proyectos <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Contacto <span class="sr-only">(current)</span></a>
+              </li>
+             
+                
+
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <a class="btn btn-outline-success my-2 my-sm-0" href="https://api.whatsapp.com/send?phone=527711009070">Contactar</a>
+          </form>
+
+          <!-- Messenger -->
+          <form class="form-inline my-2 my-lg-0">
+            <a class="btn btn-outline-danger my-2 my-sm-0" href="https://messenger.com/t//CarlosVillegasStudio">Messenger</a>
+          </form>
+
+          <form class="form-inline my-2 my-lg-0">
+            <a class="btn btn-outline-info my-2 my-sm-0" href="mailto:cv.info.studio@gmail.com">Enviar Correo</a>
           </form>
         </div>
     </nav>
